--- a/style.css
+++ b/style.css
@@ -1,1 +1,53 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 20%;
+    border-bottom: 10px solid black;
+}
+li, button {
+    display: inline;
+    list-style-type: square;
+    font-weight: 500;
+    font-size: 16px;
+    color: black;
+}
+h1{
+    font-weight: 100px;
+    font-size: 50px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+button {
+    padding: 5px 10px;
+    background-color:white;
+    border: none;
+    border-radius: 50px;
+}
+section{
+    font-size: 25px;
+    width: 70%;
+    margin: 20px auto;
+    border-bottom: 5px solid black;
+    background-color: silver;
+    text-align: center;
+}
+.db{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 300px;
+    width: 400px;
+    
+}
+
+
+
+
 
