--- a/style.css
+++ b/style.css
@@ -2,34 +2,40 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: sans-serif;
+    list-style: none;
+    text-decoration: none;
 }
-nav{
+main{
+    background-color: black;
+}
+
+.header {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 50px 20%;
-    border-bottom: 10px solid black;
-}
-li, button {
-    display: inline;
-    list-style-type: square;
-    font-weight: 500;
-    font-size: 16px;
+    justify-content: center;
+    padding: 50px;
+    background-color: silver;
     color: black;
-}
-h1{
+    font-family: monospace;
     font-weight: 100px;
     font-size: 50px;
     font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+
 }
 
-button {
-    padding: 5px 10px;
-    background-color:white;
-    border: none;
-    border-radius: 50px;
+nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 20%;
+    border-bottom: 10px solid black;
+    background-color:whitesmoke;
 }
+li {
+    display: inline;
+    font-weight: 500;
+    font-size: 16px;
+}
+
 section{
     font-size: 25px;
     width: 70%;
@@ -38,14 +44,30 @@ section{
     background-color: silver;
     text-align: center;
 }
+a{
+    color: black;
+    font-weight: 100%;
+    font-size: 25px;
+}
+
 .db{
+    display: block;
+    border-width: 10px;
+    border: silver;
+    margin-left: auto;
+    margin-right: auto;
+    height: 300px;
+    width: 500px;
+    
+}
+.pics{
     display: block;
     margin-left: auto;
     margin-right: auto;
     height: 300px;
     width: 400px;
-    
 }
+
 
 
 
