--- a/style.css
+++ b/style.css
@@ -18,22 +18,23 @@ main{
     font-family: monospace;
     font-weight: 100px;
     font-size: 50px;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 
 }
 
 nav{
     display: flex;
     justify-content: center;
-    align-items: center;
     padding: 5px 20%;
     border-bottom: 10px solid black;
     background-color:whitesmoke;
 }
 li {
     display: inline;
+    justify-content: space-between;
+    text-decoration: none;
     font-weight: 500;
     font-size: 16px;
+    margin: 50px;
 }
 
 section{
@@ -60,6 +61,7 @@ a{
     width: 500px;
     
 }
+
 .pics{
     display: block;
     margin-left: auto;
@@ -67,6 +69,17 @@ a{
     height: 300px;
     width: 400px;
 }
+.pic1{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 400px;
+    width: 500px;
+}
+h3{
+    text-decoration: underline;
+}
+
 
 
 
