--- a/style.css
+++ b/style.css
@@ -27,15 +27,18 @@ nav{
     padding: 5px 20%;
     border-bottom: 10px solid black;
     border-top: 10px solid black;
-    background-color:whitesmoke;
+    background-color:silver;
 }
 li {
     display: inline;
     justify-content: space-between;
     text-decoration: none;
     font-weight: 500;
-    font-size: 16px;
+    font-size: 26px;
     margin: 50px;
+    border-style: double;
+    border-radius: 5px;
+    
 }
 
 section{
