--- a/style.css
+++ b/style.css
@@ -10,7 +10,10 @@ main{
     flex-wrap: wrap;
 }
 .Derek{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 150px;
+    font-weight: bold;
+
 }
 
 .header {
@@ -25,7 +28,7 @@ main{
 }
 
 nav{
-    display: flex;
+    display: flex inline;
     justify-content: center;
     padding: 5px 20%;
     border-bottom: 10px solid black;
@@ -43,6 +46,10 @@ li {
     border-style: double;
     border-radius: 5px;
     
+    
+}
+li:hover{
+    color: silver ;
 }
 
 section{
@@ -69,7 +76,7 @@ h2{
 .db{
     display: block;
     border-style: solid;
-    border-color: white;
+    border-color: black;
     border-width: 5px;
     margin-left: auto;
     margin-right: auto;
@@ -101,7 +108,8 @@ h2{
 
 h3{
     text-decoration: underline;
-    font-size: 30px;
+    font-size: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #contact{
@@ -113,6 +121,8 @@ form{
     font-size: 16px;
     
 }
+
+
 
 
 
