--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ main{
     font-weight: bold;
 
 }
+p{
+    font-weight: bold;
+}
 
 .header {
     display: flex;
@@ -28,7 +31,7 @@ main{
 }
 
 nav{
-    display: flex inline;
+    display: flex;
     justify-content: center;
     padding: 5px 20%;
     border-bottom: 10px solid black;
@@ -80,28 +83,28 @@ h2{
     border-width: 5px;
     margin-left: auto;
     margin-right: auto;
-    height: 300px;
-    width: 500px;
+    height: 400px;
+    width: 80%;
     border-radius: 5%;
     
 }
 
 .pic1{
-    display: block;
+    display: inline-flex;
     margin-left: auto;
     margin-right: auto;
     height: 450px;
-    width: 550px;
+    width: 85%;
     border-style:solid;
     border-radius: 5%;
 }
 
 .pics{
-    display: block;
+    display: inline-flex;
     margin-left: auto;
     margin-right: auto;
     height: 300px;
-    width: 400px;
+    width: 75%;
     border-style:solid;
     border-radius: 5%;
 }
@@ -120,6 +123,26 @@ h3{
 form{
     font-size: 16px;
     
+}
+.pic2{
+    display: inline-flex;
+    margin-left: auto;
+    margin-right: auto;
+    height: 250px;
+    width: 250px;
+    border-style: solid black;
+    border-radius: 5%;
+    cursor: grab;
+}
+hr{
+    background-color: black;
+    height: 5px;
+    border: none;
+}
+@media screen and (max-width:480px){
+    .header{
+        font-size: 50px;
+    }
 }
 
 
