--- a/style.css
+++ b/style.css
@@ -139,6 +139,42 @@ hr{
     height: 5px;
     border: none;
 }
+footer{
+    display: inline-flex;
+    text-align: center;
+    justify-content: center;
+
+}
+.fa{
+    padding: 20px;
+    font-size: 20px;
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-instagram {
+    background: purple;
+    color: white;
+}
+.fa-reddit {
+    background: #ff5700;
+    color: white;
+  }
+.fa:hover {
+    opacity: 0.7;
+}
+
+@media screen and (min-width: 320px) {
+    main {
+      font-size: 20px;
+    }
+  }
+ 
 
 
 
