--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ main{
 }
 .Derek{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 13vw;
+    font-size: 100px;
     font-weight: bold;
 
 }
@@ -83,9 +83,10 @@ h2{
     border-width: 5px;
     margin-left: auto;
     margin-right: auto;
-    height: 400px;
-    width: 80%;
+    /*height: 400px;*/
+    width: 450px;
     border-radius: 5%;
+
     
 }
 
@@ -94,7 +95,7 @@ h2{
     margin-left: auto;
     margin-right: auto;
     height: 450px;
-    width: 85%;
+    width: 400px;
     border-style:solid;
     border-radius: 5%;
 }
@@ -104,7 +105,7 @@ h2{
     margin-left: auto;
     margin-right: auto;
     height: 300px;
-    width: 75%;
+    width: 250px;
     border-style:solid;
     border-radius: 5%;
 }
@@ -169,12 +170,16 @@ footer{
     opacity: 0.7;
 }
 
-@media screen and (min-width: 320px) {
-    main {
-      font-size: 20px;
+@media screen and (max-width: 676px) {
+    .db {
+      width: 300px;
     }
   }
- 
+  @media screen and (max-width: 676px) {
+    .pic1 {
+      width: 300px;
+    }
+  }
 
 
 
