--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ p{
     color: black;
     font-weight: 100px;
     font-size: 50px;
-
 }
 
 nav{
@@ -77,7 +76,7 @@ h2{
 }
 
 .db{
-    display: block;
+    display: inline-flex;
     border-style: solid;
     border-color: black;
     border-width: 5px;
@@ -85,9 +84,7 @@ h2{
     margin-right: auto;
     /*height: 400px;*/
     width: 450px;
-    border-radius: 5%;
-
-    
+    border-radius: 5%;   
 }
 
 .pic1{
