--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ main{
 }
 .Derek{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 100px;
+    font-size: 120px;
     font-weight: bold;
 
 }
@@ -91,8 +91,7 @@ h2{
     display: inline-flex;
     margin-left: auto;
     margin-right: auto;
-    height: 450px;
-    width: 400px;
+    width: 450px;
     border-style:solid;
     border-radius: 5%;
 }
@@ -101,8 +100,7 @@ h2{
     display: inline-flex;
     margin-left: auto;
     margin-right: auto;
-    height: 300px;
-    width: 250px;
+    width: 400px;
     border-style:solid;
     border-radius: 5%;
 }
@@ -176,6 +174,16 @@ footer{
     .pic1 {
       width: 300px;
     }
+  }
+  @media screen and (max-width: 676px) {
+    .pics {
+      width: 300px;
+    }
+  }
+  @media screen and (max-width: 676px){
+      nav ul{
+          flex-direction: column;
+      }
   }
 
 
