--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ main{
 }
 .Derek{
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 100px;
+    font-size: 85px;
     font-weight: bold;
 
 }
@@ -26,7 +26,6 @@ p{
     background-color: silver;
     color: black;
     font-weight: 100px;
-    font-size: 50px;
 }
 
 nav{
@@ -106,14 +105,14 @@ h2{
 
 h3{
     text-decoration: underline;
-    font-size: 50px;
+    font-size: 35px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #contact{
     justify-content: center;
     align-content: center;
-    padding: 30px;
+    padding: 25px;
 }
 form{
     font-size: 16px;
@@ -198,6 +197,11 @@ hr{
           flex-direction: column;
       }
   }
+  @media screen and (max-width: 676px){
+    .header{
+        font-size: 80vw;
+    }
+}
 
 
 
